<resources>
    <string name="app_name" translatable="false">Steelbat Browser</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="The_language_of_the_app">The language of the application changes automatically</string>
    <string name="make_search_in_web">Search Or Enter Address</string>
    <string name="search_engine">Search Engine</string>
    <string name="downloading">Downloading...</string>
    <string name="error_occured">Adress Not Found</string>
    <string name="browser_couldnot_reach_the_adress">The browser could not reach the provided web adress.</string>
    <string name="you_can_try_to_check_internet">-You can try to check your internet connection or you can try to check the provided web adress.</string>
    <string name="new_version">Newer version of this app is available. Please upgrade it before you use.</string>

</resources>