<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/arkaplan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/kapali_mavi">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_image"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:layout_marginLeft="10dp"
            />

        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="1dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:id="@+id/back_button"
            android:background="@android:color/transparent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="70dp"
            android:text="@string/settings"
            android:textSize="25dp"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:elevation="10dp"
            android:id="@+id/settings_text"
            />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="60dp"
        android:background="@color/arkaplan">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/language_image"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/language_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="15dp"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Language_textview_aciklama"
            android:layout_width="150dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:elevation="1dp"
            android:textStyle="italic"
            android:text="@string/The_language_of_the_app"
            />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />

    <TextView
        android:layout_marginTop="132dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="132dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:elevation="10dp"
            android:src="@drawable/search_engine_img" />

        <TextView
            android:id="@+id/search_engine_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="70dp"
            android:text="@string/search_engine"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/search_engine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="null"
            android:textColor="@color/black"
            android:textSize="12dp" />

    </RelativeLayout>

    <TextView
        android:layout_marginTop="203dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        />

</RelativeLayout>