<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:background="@color/arkaplan"
    android:id="@+id/window"
    >

    <RelativeLayout
        android:id="@+id/error_webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:background="@color/error_arkaplan"
        android:elevation="10dp"
        android:visibility="invisible">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/error_occured"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="10dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/browser_couldnot_reach_the_adress"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="160dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/you_can_try_to_check_internet"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:background="@mipmap/confused_emoji"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/kapali_mavi"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/url_edittext"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="90dp"
            android:hint="@string/make_search_in_web"
            android:imeOptions="actionSearch"
            android:inputType="textUri"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="#000000"
            android:textColorHighlight="@color/arkaplan"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@null"
            android:textIsSelectable="false"
            android:textSize="17dp" />

        <ImageButton
            android:id="@+id/settings_acilis_buton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/more_button" />

        <ImageButton
            android:id="@+id/search_btn_main"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="50dp"
            android:background="@drawable/search_img" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="60dp"
        android:background="@color/black"
        android:elevation="10dp"
        />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="@color/black" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:src="@mipmap/app_icon_bat"
        android:textColor="@color/black"
        android:elevation="1dp"
        />

    <WebView
        android:id="@+id/webview_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="61dp"
        android:elevation="2dp"
        android:visibility="invisible" />


</RelativeLayout>